--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,34 @@
-header {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+header {
+    padding: 10px 20px;
 }
 
 #grid {
-
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 10px 20px;
 }
 
-#grid .container {
-    display: flexbox;
+#grid .grid-row {
+    display: flex;
+    flex-direction: row;
 }
 
-#grid .box {
+#grid .grid-elem {
+    height: 40px;
+    width: 40px;
+    border-style: solid;
+    border-color: #121212;
+    border-width: 1px;
+    background-color: aquamarine;
+}
 
+#grid .grid-elem:hover {
+    opacity: 0.6;
 }
