--- a/styles.css
+++ b/styles.css
@@ -12,29 +12,33 @@ header {
     padding: 10px 20px;
 }
 
+#grid-container {
+    
+}
+
 .grid {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     padding: 10px 20px;
     width: 960px;
+    height: 960px;
 }
 
 .grid .grid-row {
     display: flex;
     flex-direction: row;
+    flex-grow: 1;
 }
 
 .grid .grid-elem {
-    height: 20px;
-    width: 20px;
     border-style: solid;
-    border-color: .121212;
+    border-color: #121212;
     border-width: 1px;
+    flex-grow: 1;
     background-color: aquamarine;
 }
 
 .grid .grid-elem:hover {
     opacity: 0.3;
 }
-
